# remote-sync

./: README.md  pyproject.toml
scripts/: run-with-cloudflare.sh
src/remote_sync/: __init__.py  __main__.py  auth.py  cli.py  fs.py  protocol.py  server.py  syncer.py
tests/: test_cli.py  test_sync.py
